Revise "Getting Started" instructions for Cornell
The "Getting Started" instructions in section 1.1.1 were specific
to Berkeley's cloud computing platform.  This commit revises
those instructions to be specific to Cornell and Vocareum.

--- a/notebooks/Computational_Tools.ipynb
+++ b/notebooks/Computational_Tools.ipynb
@@ -36,36 +36,33 @@
     "Python has recruited enthusiasts from many professions that use data to draw\n",
     "conclusions. By learning the Python language, you will join a\n",
     "million-person-strong community of software developers and data scientists.\n",
+    "This text will teach you to write programs, generate images from data, and work with\n",
+    "real-world data sets that are published online.\n",
     "\n",
-    "**Getting Started.** The easiest and recommended way to start writing programs\n",
-    "in Python is to log into the companion site for this text,\n",
-    "[data8.berkeley.edu](https://data8.berkeley.edu). If you are enrolled in a\n",
-    "course offering that uses this text, you should have full access to the\n",
-    "programming environment hosted on that site. The first time you log in, you will\n",
-    "find a brief tutorial describing how to proceed.\n",
+    "**Getting Started (for students in Data Science For All).** \n",
+    "You don't need to install any software on your computer.  Everything\n",
+    "will run in your web browser. Just log in to [Vocareum\n",
+    "Labs](https://labs.vocareum.com). After you are enrolled in the course,\n",
+    "you should have full access to the programming environment hosted on\n",
+    "that site. If not, or if you have any technical difficulties with\n",
+    "Vocareum, consult with your recitation TA for assistance. All\n",
+    "assignments (labs, homeworks, and projects) will be released to you in\n",
+    "Vocareum, and you will submit them there, too.  \n",
     "\n",
-    "You are not at all restricted to using this web-based programming environment.\n",
+    "**Getting Started (for others).**\n",
     "A Python program can be executed by any computer, regardless of its\n",
     "manufacturer or operating system, provided that support for the language is\n",
     "installed. If you wish to install the version of Python and its accompanying\n",
-    "libraries that will match this text, we recommend the [Anaconda][download]\n",
-    "distribution that packages together the Python 3 language interpreter, IPython\n",
-    "libraries, and the Jupyter notebook environment.\n",
-    "\n",
-    "   [download]: http://continuum.io/downloads#py34\n",
-    "\n",
-    "This text includes a complete introduction to all of these computational tools.\n",
-    "You will learn to write programs, generate images from data, and work with\n",
-    "real-world data sets that are published online.\n",
-    "\n"
+    "libraries that will match this text, we recommend [Anaconda](https://www.anaconda.com/download/).  Make sure to install the \n",
+    "Python 3 version, not the Python 2 version.  You'll also need to \n",
+    "install the `datascience` [library](https://github.com/data-8/datascience).\n",
+    "The easiest way to do that is to open a terminal and run `pip install datascience`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -86,9 +83,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.4"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
