--- a/notebooks/Plotting_the_Classics.ipynb
+++ b/notebooks/Plotting_the_Classics.ipynb
@@ -18,10 +18,10 @@
     "import warnings\n",
     "warnings.simplefilter(action=\"ignore\", category=FutureWarning)\n",
     "\n",
-    "from urllib.request import urlopen \n",
-    "import re\n",
-    "def read_url(url): \n",
-    "    return re.sub('\\\\s+', ' ', urlopen(url).read().decode())"
+    "def read_file(f):\n",
+    "    with open (f, 'r') as file:\n",
+    "        data=file.read()\n",
+    "    return data"
    ]
   },
   {
@@ -32,7 +32,7 @@
     "\n",
     "This example is meant to illustrate some of the broad themes of this text. Don't worry if the details of the program don't yet make sense. Instead, focus on interpreting the images generated below. Later sections of the text will describe most of the features of the Python programming language used below.\n",
     "\n",
-    "First, we read the text of both books into lists of chapters, called `huck_finn_chapters` and `little_women_chapters`. In Python, a name cannot contain any spaces, and so we will often use an underscore `_` to stand in for a space. The `=` in the lines below give a name on the left to the result of some computation described on the right. A *uniform resource locator* or *URL* is an address on the Internet for some content; in this case, the text of a book. The `#` symbol starts a comment, which is ignored by the computer but helpful for people reading the code."
+    "First, we read the text of both books into lists of chapters, called `huck_finn_chapters` and `little_women_chapters`. In Python, a name cannot contain any spaces, and so we will often use an underscore `_` to stand in for a space. The `=` in the lines below give a name on the left to the result of some computation described on the right. The `#` symbol starts a comment, which is ignored by the computer but helpful for people reading the code."
    ]
   },
   {
@@ -43,12 +43,10 @@
    "source": [
     "# Read two books, fast!\n",
     "\n",
-    "huck_finn_url = 'https://www.inferentialthinking.com/chapters/01/3/huck_finn.txt'\n",
-    "huck_finn_text = read_url(huck_finn_url)\n",
+    "huck_finn_text = read_file('huck_finn.txt')\n",
     "huck_finn_chapters = huck_finn_text.split('CHAPTER ')[44:]\n",
     "\n",
-    "little_women_url = 'https://www.inferentialthinking.com/chapters/01/3/little_women.txt'\n",
-    "little_women_text = read_url(little_women_url)\n",
+    "little_women_text = read_file('little_women.txt')\n",
     "little_women_chapters = little_women_text.split('CHAPTER ')[1:]"
    ]
   },
@@ -75,43 +73,65 @@
        "    </thead>\n",
        "    <tbody>\n",
        "        <tr>\n",
-       "            <td>I. YOU don't know about me without you have read a book  ...</td>\n",
+       "            <td>I.\n",
+       "\n",
+       "YOU don't know about me without you have read a book ...</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "        <tr>\n",
-       "            <td>II. WE went tiptoeing along a path amongst the trees bac ...</td>\n",
+       "            <td>II.\n",
+       "\n",
+       "WE went tiptoeing along a path amongst the trees ba ...</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "        <tr>\n",
-       "            <td>III. WELL, I got a good going-over in the morning from o ...</td>\n",
+       "            <td>III.\n",
+       "\n",
+       "WELL, I got a good going-over in the morning from  ...</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "        <tr>\n",
-       "            <td>IV. WELL, three or four months run along, and it was wel ...</td>\n",
+       "            <td>IV.\n",
+       "\n",
+       "WELL, three or four months run along, and it was we ...</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "        <tr>\n",
-       "            <td>V. I had shut the door to. Then I turned around and ther ...</td>\n",
+       "            <td>V.\n",
+       "\n",
+       "I had shut the door to.  Then I turned around and th ...</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "        <tr>\n",
-       "            <td>VI. WELL, pretty soon the old man was up and around agai ...</td>\n",
+       "            <td>VI.\n",
+       "\n",
+       "WELL, pretty soon the old man was up and around aga ...</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "        <tr>\n",
-       "            <td>VII. \"GIT up! What you 'bout?\" I opened my eyes and look ...</td>\n",
+       "            <td>VII.\n",
+       "\n",
+       "\"GIT up!  What you 'bout?\"\n",
+       "\n",
+       "I opened my eyes and l ...</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "        <tr>\n",
-       "            <td>VIII. THE sun was up so high when I waked that I judged  ...</td>\n",
+       "            <td>VIII.\n",
+       "\n",
+       "THE sun was up so high when I waked that I judged ...</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "        <tr>\n",
-       "            <td>IX. I wanted to go and look at a place right about the m ...</td>\n",
+       "            <td>IX.\n",
+       "\n",
+       "I wanted to go and look at a place right about the  ...</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "        <tr>\n",
-       "            <td>X. AFTER breakfast I wanted to talk about the dead man a ...</td>\n",
+       "            <td>X.\n",
+       "\n",
+       "AFTER breakfast I wanted to talk about the dead man  ...</td>\n",
        "        </tr>\n",
        "    </tbody>\n",
        "</table>\n",
@@ -119,16 +139,38 @@
       ],
       "text/plain": [
        "Chapters\n",
-       "I. YOU don't know about me without you have read a book  ...\n",
-       "II. WE went tiptoeing along a path amongst the trees bac ...\n",
-       "III. WELL, I got a good going-over in the morning from o ...\n",
-       "IV. WELL, three or four months run along, and it was wel ...\n",
-       "V. I had shut the door to. Then I turned around and ther ...\n",
-       "VI. WELL, pretty soon the old man was up and around agai ...\n",
-       "VII. \"GIT up! What you 'bout?\" I opened my eyes and look ...\n",
-       "VIII. THE sun was up so high when I waked that I judged  ...\n",
-       "IX. I wanted to go and look at a place right about the m ...\n",
-       "X. AFTER breakfast I wanted to talk about the dead man a ...\n",
+       "I.\n",
+       "\n",
+       "YOU don't know about me without you have read a book ...\n",
+       "II.\n",
+       "\n",
+       "WE went tiptoeing along a path amongst the trees ba ...\n",
+       "III.\n",
+       "\n",
+       "WELL, I got a good going-over in the morning from  ...\n",
+       "IV.\n",
+       "\n",
+       "WELL, three or four months run along, and it was we ...\n",
+       "V.\n",
+       "\n",
+       "I had shut the door to.  Then I turned around and th ...\n",
+       "VI.\n",
+       "\n",
+       "WELL, pretty soon the old man was up and around aga ...\n",
+       "VII.\n",
+       "\n",
+       "\"GIT up!  What you 'bout?\"\n",
+       "\n",
+       "I opened my eyes and l ...\n",
+       "VIII.\n",
+       "\n",
+       "THE sun was up so high when I waked that I judged ...\n",
+       "IX.\n",
+       "\n",
+       "I wanted to go and look at a place right about the  ...\n",
+       "X.\n",
+       "\n",
+       "AFTER breakfast I wanted to talk about the dead man  ...\n",
        "... (33 rows omitted)"
       ]
      },
@@ -167,7 +209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
